<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name1">"自闭症"</string>
    <string name="app_name2">"自闭症检测"</string>
    <string name="action_settings">Settings</string>
    <string name="title">"自闭症自我检测题"</string>
    <string name="backbtn">"返回"</string>
    <string name="button01">"自闭我了解。。。。"</string>
    <string name="button02">"自闭我知道。。。。"</string>
    <string name="button03">"自闭我预防。。。。"</string>
    <string name="button04">"开心一刻。。。。"</string>
    <string name="button05">"简介"</string>
    <string name="button06">"病因"</string>
    <string name="button07">"临床表现"</string>
    <string name="textview01"></string>
    <string name="textview02"></string>
    <string name="textview03"></string>
    <string name="textview04"></string>
    <string name="textview05"></string>
    <string name="question01">"1、"</string>
    <string name="question02">"2、"</string>
    <string name="question03">"3、"</string>
    <string name="question04">"4、"</string>
    <string name="question05">"5、"</string>
    <string name="question06">"6、"</string>
    <string name="question07">"7、"</string>
    <string name="question08">"8、"</string>
    <string name="question09">"9、"</string>
    <string name="question10">"10、"</string>
    <string name="rbtn11">A、</string>
    <string name="rbtn12">B、</string>
    <string name="rbtn13">C、</string>
    <string name="rbtn14">D、</string>
    <string name="rbtn21">A、</string>
    <string name="rbtn22">B、</string>
    <string name="rbtn23">C、</string>
    <string name="rbtn24">D、</string>
    <string name="rbtn31">A、</string>
    <string name="rbtn32">B、</string>
    <string name="rbtn33">C、</string>
    <string name="rbtn34">D、</string>
    <string name="rbtn41">A、</string>
    <string name="rbtn42">B、</string>
    <string name="rbtn43">C、</string>
    <string name="rbtn44">D、</string>
    <string name="rbtn51">A、</string>
    <string name="rbtn52">B、</string>
    <string name="rbtn53">C、</string>
    <string name="rbtn54">D、</string>
    <string name="rbtn61">A、</string>
    <string name="rbtn62">B、</string>
    <string name="rbtn63">C、</string>
    <string name="rbtn64">D、</string>
    <string name="rbtn71">A、</string>
    <string name="rbtn72">B、</string>
    <string name="rbtn73">C、</string>
    <string name="rbtn74">D、</string>
    <string name="rbtn81">A、</string>
    <string name="rbtn82">B、</string>
    <string name="rbtn83">C、</string>
    <string name="rbtn84">D、</string>
    <string name="rbtn91">A、</string>
    <string name="rbtn92">B、</string>
    <string name="rbtn93">C、</string>
    <string name="rbtn94">D、</string>
    <string name="rbtn101">A、</string>
    <string name="rbtn102">B、</string>
    <string name="rbtn103">C、</string>
    <string name="rbtn104">D、</string>
    <string name="submit">"提交"</string>
    <string name="TV"></string>
    <string name="tv01"></string>
    <string name="tv02"></string>
    <string name="bt01"></string>
    <string name="btn_all">全部</string>
    <string name="btn_motivational">励志</string>
    <string name="btn_career">事业</string>
    <string name="btn_life">人生</string>
    <string name="btn_time">时间</string>
    <string name="btn_love">爱情</string>
    <string name="btn_sf">成败</string>
    <string name="btn_study">学习</string>
    <string name="btn_morality">道德</string>
    <string name="btn_science">科学</string>
    <string name="btn_youth">青春</string>
    <string name="btn_friendship">友谊</string>
    <string name="btn_team">集体</string>
    <string name="btn_confidence">自信</string>
    <string name="btn_struggle">拼搏</string>
    <string name="btn_work">职场</string>
    <string name="btn_family">家庭</string>
    <string name="btn_children">儿童</string>
    <string name="btn_animal">动物</string>
    <string name="btn_school">校园</string>
</resources>
