<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   >
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/question01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question01" 
        android:layout_below="@+id/title"
        />
    <RadioGroup
        android:id="@+id/group01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question01"
        >
    <RadioButton
        android:id="@+id/rbtn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn11"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn12">
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn13"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn14"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question02"
        android:layout_below="@+id/group01"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question02">
    <RadioButton
        android:id="@+id/rbtn21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn21"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn22"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn23"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn24"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn24"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question03"
        android:layout_below="@+id/group02"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question03">
    <RadioButton
        android:id="@+id/rbtn31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn31"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn32"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn33"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn34"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn34"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question03"
        android:layout_below="@+id/group03"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question04">
    <RadioButton
        android:id="@+id/rbtn41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn41"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn42"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn43"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn44"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn44"
        >
        </RadioButton>
    </RadioGroup>        
    <TextView
        android:id="@+id/question05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group04"
        android:text="@string/question05"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question05"
        >
    <RadioButton
        android:id="@+id/rbtn51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn51"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn52"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn53"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn54">
        </RadioButton>
        </RadioGroup>
        <TextView
        android:id="@+id/question06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question06" 
        android:layout_below="@+id/group05"
        />
    <RadioGroup
        android:id="@+id/group06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question06"
        >
    <RadioButton
        android:id="@+id/rbtn61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn61"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn62">
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn63"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn64"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question07"
        android:layout_below="@+id/group06"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question07">
    <RadioButton
        android:id="@+id/rbtn71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn71"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn72"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn73"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn74"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn74"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question08"
        android:layout_below="@+id/group07"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question08">
    <RadioButton
        android:id="@+id/rbtn81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn81"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn82"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn83"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn84"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn84"
        >
        </RadioButton>
    </RadioGroup>
    <TextView
        android:id="@+id/question09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question09"
        android:layout_below="@+id/group08"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/question09">
    <RadioButton
        android:id="@+id/rbtn91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn91"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn92"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn92"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn93"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn94"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/rbtn94"
        >
        </RadioButton>
    </RadioGroup>        
    <TextView
        android:id="@+id/question10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group09"
        android:text="@string/question10"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/group10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question10"
        >
    <RadioButton
        android:id="@+id/rbtn101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn101"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn102"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn103"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn103"
        >
        </RadioButton>
    <RadioButton
        android:id="@+id/rbtn104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbtn104">
        </RadioButton>
        </RadioGroup>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group10"
        android:background="@drawable/submit"
        >
        </Button>
    <TextView
        android:id="@+id/TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TV"
        android:layout_below="@+id/submit"
        >
        </TextView>


</RelativeLayout>
</ScrollView>
