<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background04">
        <Button
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_all"
            android:layout_marginTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            </Button>
        <Button
            android:id="@+id/btn_motivational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_motivational"
            android:layout_marginTop="5dp"
            android:layout_alignBaseline="@id/btn_all"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp">
            </Button>
        <Button
            android:id="@+id/btn_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/btn_life"
            android:layout_alignBaseline="@id/btn_motivational"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            >
            </Button>

        <Button
            android:id="@+id/btn_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_all"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_career" />
        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_career"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_time" />
        <Button
            android:id="@+id/btn_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_career"
            android:layout_marginTop="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/btn_love" />
       <Button
            android:id="@+id/btn_sf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_career"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_sf" />
        <Button
            android:id="@+id/btn_study"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_sf"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_study" />
        <Button
            android:id="@+id/btn_morality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_sf"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/btn_morality" />
        <Button
            android:id="@+id/btn_science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_sf"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_science" />
        <Button
            android:id="@+id/btn_youth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_science"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_youth" />
        <Button
            android:id="@+id/btn_friendship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_science"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/btn_friendship" />
        <Button
            android:id="@+id/btn_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_science"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_team" />
        <Button
            android:id="@+id/btn_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_team"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_confidence" />
        <Button
            android:id="@+id/btn_struggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btn_team"
            android:layout_marginTop="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/btn_struggle" />

</RelativeLayout>
