<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:scrollbars="vertical">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"> 
        <TextView
        android:id="@+id/textview02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview02"
        >
        </TextView>

        <Button
            android:id="@+id/button07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textview02"
            android:layout_toRightOf="@+id/button06"
            android:text="@string/button07" />

        <Button
            android:id="@+id/button05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button06"
            android:layout_alignBottom="@+id/button06"
            android:layout_alignLeft="@+id/textview02"
            android:layout_marginLeft="30dp"
            android:text="@string/button05" />

        <Button
            android:id="@+id/button06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textview02"
            android:layout_toRightOf="@+id/button05"
            android:text="@string/button06" />
        <TextView
            android:id="@+id/textview04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button05"
            android:text="@string/textview04"
            >
            </TextView>

        <TextView
            android:id="@+id/textview05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview04"
            android:text="@string/textview05" >
            </TextView>
</RelativeLayout>
</ScrollView>