<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background01">
        <Button
        android:id="@+id/btn_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_school"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        >
        </Button>
        <Button
            android:id="@+id/btn_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_children"
            android:layout_below="@+id/btn_school"
            android:layout_marginTop="29dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            </Button>
        <Button
            android:id="@+id/btn_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_animal"
            android:layout_below="@+id/btn_children"
            android:layout_marginTop="29dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            </Button>
        <Button
            android:id="@+id/btn_family"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_family"
            android:layout_below="@+id/btn_animal"
            android:layout_marginTop="29dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            </Button>
        <Button
            android:id="@+id/btn_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_work"
            android:layout_below="@+id/btn_family"
            android:layout_marginTop="29dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            >
            </Button>
</RelativeLayout>